src/test/ui/issue-38715.stderr
error[E0428]: the name `foo` is defined multiple times
  --> $DIR/issue-38715.rs:15:1
   |
LL | macro_rules! foo { ($i:ident) => {} }
   | ---------------- previous definition of the macro `foo` here
...
LL | macro_rules! foo { () => {} } //~ ERROR the name `foo` is defined multiple times
   | ^^^^^^^^^^^^^^^^ `foo` redefined here
   |
   = note: `foo` must be defined only once in the macro namespace of this module

error[E0601]: `main` function not found in crate `issue_38715`
   |
   = note: consider adding a `main` function to `$DIR/issue-38715.rs`

error: aborting due to 2 previous errors

Some errors occurred: E0428, E0601.
For more information about an error, try `rustc --explain E0428`.
